# docs/swagger.json
@@ -35,6 +35,13 @@
                         "schema": {
                             "$ref": "#/definitions/contacts.createPayload"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "example": "Basic R0lGODlhAQAB",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -227,7 +234,8 @@
                     "minLength": 5
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 1
                 }
             }
         },
